monster-stack/dnmonster-full.yaml


apiVersion: v1
kind: Service
metadata:
  name: dnmonster
  labels:
    app: monsterstack
spec:
  ports:
    - port: 8080
  selector:
    app: monsterstack 
    tier: dnmonster
#   clusterIP: None
  type: NodePort

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dnmonster 
  labels:
    app: monsterstack
spec:
  selector:
    matchLabels:
      app: monsterstack
      tier: dnmonster
  strategy:
    type: Recreate
  replicas: 3
  template:
    metadata:
      labels:
        app: monsterstack
        tier: dnmonster
    spec:
      containers:
      - image: amouat/dnmonster:1.0
        name: dnmonster
        ports:
        - containerPort: 8080
          name: monstericon
