monster-stack/monster-icon-full.yaml
apiVersion: v1
kind: Service
metadata:
  name: monstericon
  labels:
    app: monsterstack
spec:
  ports:
    - port: 5000
  selector:
    app: monsterstack 
    tier: monstericon
#   clusterIP: None
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: monstericon 
  labels:
    app: monsterstack
spec:
  selector:
    matchLabels:
      app: monsterstack
      tier: monstericon
  strategy:
    type: Recreate
  replicas: 3
  template:
    metadata:
      labels:
        app: monsterstack
        tier: monstericon
    spec:
      containers:
      - image: tecpi/monster_icon:0.1
        name: monstericon
        ports:
        - containerPort: 5000
          name: monstericon
---
